--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,18 @@
 menu:
     Blog: /
     Archive: /archives/
-    Weibo: http://weibo.com/sunchongsheng
-    GitHub: https://github.com/pinggod
-    Rss: /atom.xml
+    GitHub: https://github.com/lili21
 
 favicon: /favicon.png
 logo: /favicon.png
 
 # Comment
 # e.g disqus: seansun
-disqus:
-duoshuo:
+disqus: lili21githubio
 
 # Analytics
 # google-analytics:
-ga: UA-65933410-1
+ga: UA-81262565-1
 
 # Copyright Infomation
-startyear: 2015
+startyear: 2016
